--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "ethers": "^5.0.9",
     "solhint": "^3.2.0",
     "solidity-coverage": "^0.7.10"
+  },
+  "dependencies": {
+    "@nomiclabs/buidler-etherscan": "^2.0.1",
+    "bignumber.js": "^9.0.0"
   }
 }
