Added variables and deposit in progress.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@nomiclabs/buidler-etherscan": "^2.0.1",
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "bignumber.js": "^9.0.0"
   }
 }
