--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^3.1.0",
+    "buidler-abi-exporter": "^1.0.1",
     "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
