--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "buidler test",
-        "coverage": "npx buidler coverage --network coverage",
+        "test": "hardhat test",
+        "coverage": "npx hardhat coverage --network coverage",
         "lint": "npm run lint:js && npm run lint:sol",
         "lint:fix": "npm run lint:js:fix",
         "lint:js": "eslint .",
@@ -15,19 +15,15 @@
     "author": "BarnBridge",
     "license": "Apache-2",
     "devDependencies": {
-        "@nomiclabs/buidler": "^1.4.4",
-        "@nomiclabs/buidler-ethers": "^2.0.0",
-        "@nomiclabs/buidler-waffle": "^2.0.0",
         "@nomiclabs/hardhat-ethers": "^2.0.1",
         "@nomiclabs/hardhat-etherscan": "^2.1.1",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
         "@openzeppelin/contracts": "^3.1.0",
+        "@openzeppelin/contracts-ethereum-package": "^3.0.0",
         "@typechain/ethers-v5": "^6.0.1",
         "@types/chai": "^4.2.14",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.14.6",
-        "buidler-abi-exporter": "^1.0.1",
-        "buidler-gas-reporter": "^0.1.3",
         "chai": "^4.2.0",
         "chai-bignumber": "^3.0.0",
         "eslint": "^6.8.0",
@@ -37,24 +33,20 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "ethereum-waffle": "^3.1.0",
-        "ethers": "^5.0.9",
+        "ethereum-waffle": "^3.3.0",
+        "ethers": "^5.0.31",
         "hardhat": "^2.0.11",
         "hardhat-abi-exporter": "^2.0.8",
         "hardhat-gas-reporter": "^1.0.4",
         "hardhat-typechain": "^0.3.5",
         "solhint": "^3.2.0",
-        "solidity-coverage": "^0.7.10",
+        "solidity-coverage": "^0.7.15",
         "ts-generator": "^0.1.1",
         "ts-node": "^9.1.1",
         "typechain": "^4.0.2",
         "typescript": "^4.2.2"
     },
-    "dependencies": {
-        "@nomiclabs/buidler-etherscan": "^2.0.1",
-        "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-        "bignumber.js": "^9.0.0"
-    },
+    "dependencies": {},
     "engines": {
         "yarn": "NO LONGER USED - Please use npm"
     }
